--- a/power.html
+++ b/power.html
@@ -9,9 +9,9 @@
 	<a href="index.html"><img src="brain.jpg" alt="Our Power"idth="500px" height="800px"></a> <a href="https://www.flickr.com/photos/svklimkin/36404527946/in/photolist-Hvdvhi-XsWHQW-qRSoko-qRZQVz-9XytgG-cRzBij-acg5vF-dPuvJT-FM8661-9CXf2M-bK6skK-F8JBFo-c5vkMm-AJDR4z-JomJnp-2hENA9X-niwG-Y5enpA-ETYpu7-FPpVvn-CMo2Lw-eboaAz-dCH7xV-aDHbWZ-d1jbTo-eJgyYq-4HfejV-RaqGFB-21fN782-pDvodH-djaFxZ-2in23So-HUK8fw-JTEKv3-nLC8qQ-JHWyW-pHL7j-nuiGio-9rUfK3-21aVzhy-RUnRZ7-23KksEP-76g4c-CQAih-ShhxZy-Mx6yVu-nuiL1f-5FHy2r-7GMuJQ-FwvJx">svklimkin,neurons,8/8/2017.</a>
 		<p>Every member of the Sargonic Nation has a special power. We feed off our vibrationally heightened environemnt to create increased brain power. We are very sharp, wuick and resourceful. A few of us have such heightened ability that we can actually see future possibilities of danger and light. We see visions when a storm is coming or a particularly bad spirit is trying to penetrate the world aura. Slyth is one of the most advanced soldiers. </p>
 
-	<a href="who.html"><img src="slyth.jpg" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
+	<a href="who.html"><img src="slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
 	
-	<a href="where.html"><img src="forrest.jpg" alt="Where Are We From" width="500px" height="300px"></a><a href="https://www.flickr.com/photos/photographingtravis/16123321323/in/faves-190236464@N02/">
+	<a href="where.html"><img src="environment.jpg" alt="Where Are We From" width="500px" height="300px"></a><a href="https://www.flickr.com/photos/photographingtravis/16123321323/in/faves-190236464@N02/">
 	
 	<a href="us.html"><img src="snake.jpg" alt="Our People" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/longitudelatitude/3819075931/in/photolist-6PtLdK-88H4B8-6tUAMi-4K2rdZ-4K6FKf-4K6FH9-9LDDt2-pMDsLY-9W2niu-4K2r94-48wcPX-5vnqVH-74tRJK-4sG5uu-d8hvMd-bd8tVi-2xS883-8VEPkn-4nTku9-d8huWU-u1qV-4ySqq-4ySm7-KdYrM3-2xS8uY-5CQxc6-8174kN-s3LzEN-N5Lg-9VYxkM-afp4br-3JH2jr-Azms-8VENJV-6pLoJR-tyGiNZ-81hwD8-8jApZH-4VE1N1-d1mHg5-5uUEP5-cuY5Cd-hfkBj1-6KGsag-K16Us-9a2Fk7-chf735-CLFFE2-bd8tme-8m6KS3">LongitudeLatitude,snake,8/12/2009.</a>
 	
