--- a/where.html
+++ b/where.html
@@ -8,13 +8,13 @@
 <body>
 	<h1> Natrice</h1>
 	
-		<a href="power.html"><img src="trunks.jpg"alt="Our Power" width="500px" height="800px"></a> <a href="https://www.flickr.com/photos/rezendi/14298422733/in/faves-190236464@N02/">Evans, John,tree-trunks,5/25/2014</a>
+		<a href="power.html"><img src="environment.jpg"alt="Our Power" width="500px" height="800px"></a> <a href="https://www.flickr.com/photos/rezendi/14298422733/in/faves-190236464@N02/">Evans, John,tree-trunks,5/25/2014</a>
 	
 	<p>Natrice, is a dense forrest hidden in the middle of the 
 	Amazon. Hallowed tree trunks are their place of rest. Because of the high vibrational forrest, their environment looks nothing like the world we are used to. Blue bionic soil covers the Earth, illuminating grass and air streams act as water. Beyond the limits of the forrest, the world looks how we know it.</p>
 		
 
-		<a href="who.html"><img src="slyth.jpg" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
+		<a href="who.html"><img src="slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
 		
 		<a href="us.html"><img src="snake.jpg" alt="Our People" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/longitudelatitude/3819075931/in/photolist-6PtLdK-88H4B8-6tUAMi-4K2rdZ-4K6FKf-4K6FH9-9LDDt2-pMDsLY-9W2niu-4K2r94-48wcPX-5vnqVH-74tRJK-4sG5uu-d8hvMd-bd8tVi-2xS883-8VEPkn-4nTku9-d8huWU-u1qV-4ySqq-4ySm7-KdYrM3-2xS8uY-5CQxc6-8174kN-s3LzEN-N5Lg-9VYxkM-afp4br-3JH2jr-Azms-8VENJV-6pLoJR-tyGiNZ-81hwD8-8jApZH-4VE1N1-d1mHg5-5uUEP5-cuY5Cd-hfkBj1-6KGsag-K16Us-9a2Fk7-chf735-CLFFE2-bd8tme-8m6KS3">LongitudeLatitude,snake,8/12/2009.</a>
 
