--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Slyth's World.</h1>
 		<p>Hidden in the dense Natrice forrests, Slyth soldiers her ground. A fierce warrior with a lot to prove, this is Slyth's story.</p>
 			
-			<a href="where.html"><img src="environment.jpg" alt="Forrest" width="800px" height="800px"></a> <a href="Slyth's Envirnment">Bousquet,Neena, MMP 100, 2020</a>
+			<a href="where.html"><img src="Environment.jpg" alt="Forrest" width="800px" height="800px"></a> <a href="Slyth's Envirnment">Bousquet,Neena, MMP 100, 2020</a>
 			<a href="who.html"><img src="slyth.png" alt="Slyth" width="800px" height="800px"></a> <a href="">Bousquet,Neena,MMP100,2020</a>
 			
 			<a href="us.html"><img src="snake.jpg" alt="One of Us" width="800px" height="800px"></a> <a href="https://www.flickr.com/photos/longitudelatitude/3819075931/in/photolist-6PtLdK-88H4B8-6tUAMi-4K2rdZ-4K6FKf-4K6FH9-9LDDt2-pMDsLY-9W2niu-4K2r94-48wcPX-5vnqVH-74tRJK-4sG5uu-d8hvMd-bd8tVi-2xS883-8VEPkn-4nTku9-d8huWU-u1qV-4ySqq-4ySm7-KdYrM3-2xS8uY-5CQxc6-8174kN-s3LzEN-N5Lg-9VYxkM-afp4br-3JH2jr-Azms-8VENJV-6pLoJR-tyGiNZ-81hwD8-8jApZH-4VE1N1-d1mHg5-5uUEP5-cuY5Cd-hfkBj1-6KGsag-K16Us-9a2Fk7-chf735-CLFFE2-bd8tme-8m6KS3">LongitudeLatitude,snake,8/12/2009.</a>
