--- a/us.html
+++ b/us.html
@@ -10,7 +10,7 @@
 	<a href="index.html"><img src="statue.jpg"alt="Our Ancestors" width="500px" height="800px"></a> <a href="https://www.flickr.com/photos/r4n/5451811524/in/photolist-9iKXCq-oz2nSE-nLVvTw-oS9yFR-deMQjZ-CoNRT-LAoNC-zUXHmn-6pfWga-55TZaY-5tqkY-3eeR3r-6pk7tq-DdVTd-MrworE-TUB2Ei-ozVEw8-6hy6sE-8ccNoV-3gXcL-5sdtHP-25ynBX-58ghdN-8Lzw5-5vrJg6-j6twK-hcapb-cFCkC1-gyhp61-2rRCMB-cFCjo3-9gbKPq-gzsJHD-aAT2nB-bMvXac-RExzn3-93HuKc-6UjXT3-4K9F5S-UJLS39-9xiBog-TFhhaW-r5yc4X-rianLQ-cFChVJ-e1s5bW-b79jAK-8oHoWA-TnMuJT-9Bv3ya">Szuban,Radek,Statue,2/5/2011</a>
 	<p>The Sargonic Nation is family. We all came from Papa Toulou and Mother Talout. We worship them as a spiritual practice for strength, patience and wellness. From them, we recieve the spirit to guard.</p>
 
-		<a href="who.html"><img src="slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
-		<a href="where.html"><img src="environment.jpg" alt="Where Are We From" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/photographingtravis/16123321323/in/faves-190236464@N02/">
+		<a href="who.html"><img src="Slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
+		<a href="where.html"><img src="Environment.jpg" alt="Where Are We From" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/photographingtravis/16123321323/in/faves-190236464@N02/">
 </body>
 </html>
