--- a/power.html
+++ b/power.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Our Power</h1>
-	<a href="index.html"><img src="brain.jpg" alt="Our Power"idth="500px" height="800px"></a> <a href="https://www.flickr.com/photos/svklimkin/36404527946/in/photolist-Hvdvhi-XsWHQW-qRSoko-qRZQVz-9XytgG-cRzBij-acg5vF-dPuvJT-FM8661-9CXf2M-bK6skK-F8JBFo-c5vkMm-AJDR4z-JomJnp-2hENA9X-niwG-Y5enpA-ETYpu7-FPpVvn-CMo2Lw-eboaAz-dCH7xV-aDHbWZ-d1jbTo-eJgyYq-4HfejV-RaqGFB-21fN782-pDvodH-djaFxZ-2in23So-HUK8fw-JTEKv3-nLC8qQ-JHWyW-pHL7j-nuiGio-9rUfK3-21aVzhy-RUnRZ7-23KksEP-76g4c-CQAih-ShhxZy-Mx6yVu-nuiL1f-5FHy2r-7GMuJQ-FwvJx">svklimkin,neurons,8/8/2017.</a>
+	<a href="index.html"><iframe style="width: 600px; height: 6000px; overflow: hidden;"  scrolling="no" frameborder="0" src="https://editor.p5js.org/Neenab/embed/P4Kng9zoE" alt="Our Power"idth="500px" height="800px"></a> <a href="https://w</iframe>
 		<p>Every member of the Sargonic Nation has a special power. We feed off our vibrationally heightened environemnt to create increased brain power. We are very sharp, wuick and resourceful. A few of us have such heightened ability that we can actually see future possibilities of danger and light. We see visions when a storm is coming or a particularly bad spirit is trying to penetrate the world aura. Slyth is one of the most advanced soldiers therefore, her abilities are the shrapest of the pack </p>
 
 	<a href="who.html"><img src="Slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
