--- a/where.html
+++ b/where.html
@@ -8,10 +8,10 @@
 <body>
 	<h1> Natrice</h1>
 	
-		<a href="power.html"><img src="Environment.jpg"alt="Our Power" width="500px" height="800px"></a> <a href="https://www.flickr.com/photos/rezendi/14298422733/in/faves-190236464@N02/">Evans, John,tree-trunks,5/25/2014</a>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/949177159&color=%2328ed15&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/neena-bousquet" title="Neena Bousquet" target="_blank" style="color: #cccccc; text-decoration: none;">Neena Bousquet</a> · <a href="https://soundcloud.com/neena-bousquet/slyth-audio" title="Slyth Audio" target="_blank" style="color: #cccccc; text-decoration: none;">Slyth Audio</a></div>
 	
-	<p>Natrice, is a dense forrest hidden in the middle of the 
-	Amazon. Hallowed tree trunks are their place of rest. Because of the high vibrational forrest, their environment looks nothing like the world we are used to. Blue bionic soil covers the Earth, illuminating grass and air streams act as water. Beyond the limits of the forrest, the world looks how we know it.</p>
+	
+	<p>Natrice, is a dense forrest hidden in the middle of the Amazon. Hallowed tree trunks are their place of rest. Because of the high vibrational forrest, their environment looks nothing like the world we are used to. Blue bionic soil covers the Earth, illuminating grass and air streams act as water. Beyond the limits of the forrest, the world looks how we know it. Although, over the protection, is a dark force.</p>
 		
 
 		<a href="who.html"><img src="Slyth.png" alt="Discover Slyth" width="500px" height="300px"></a> <a href="">Bousquet,Neena,MMP100,9/14/2020</a>
