--- a/who.html
+++ b/who.html
@@ -12,7 +12,7 @@
 
 	<a href="where.html"><img src="Environment.jpg" alt="Where Are We From" width="500px" height="300px"></a> <a href="https://www.flickr.com/photos/photographingtravis/16123321323/in/faves-190236464@N02/">
 	
-	<a href="us.html"><img src="snake.jpg" alt="Our People" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/longitudelatitude/3819075931/in/photolist-6PtLdK-88H4B8-6tUAMi-4K2rdZ-4K6FKf-4K6FH9-9LDDt2-pMDsLY-9W2niu-4K2r94-48wcPX-5vnqVH-74tRJK-4sG5uu-d8hvMd-bd8tVi-2xS883-8VEPkn-4nTku9-d8huWU-u1qV-4ySqq-4ySm7-KdYrM3-2xS8uY-5CQxc6-8174kN-s3LzEN-N5Lg-9VYxkM-afp4br-3JH2jr-Azms-8VENJV-6pLoJR-tyGiNZ-81hwD8-8jApZH-4VE1N1-d1mHg5-5uUEP5-cuY5Cd-hfkBj1-6KGsag-K16Us-9a2Fk7-chf735-CLFFE2-bd8tme-8m6KS3">LongitudeLatitude,snake,8/12/2009.</a>
+	<a href="final.html"><img src="snake.jpg" alt="Our People" width="500 px" height="300px"></a>  <a href="https://www.flickr.com/photos/longitudelatitude/3819075931/in/photolist-6PtLdK-88H4B8-6tUAMi-4K2rdZ-4K6FKf-4K6FH9-9LDDt2-pMDsLY-9W2niu-4K2r94-48wcPX-5vnqVH-74tRJK-4sG5uu-d8hvMd-bd8tVi-2xS883-8VEPkn-4nTku9-d8huWU-u1qV-4ySqq-4ySm7-KdYrM3-2xS8uY-5CQxc6-8174kN-s3LzEN-N5Lg-9VYxkM-afp4br-3JH2jr-Azms-8VENJV-6pLoJR-tyGiNZ-81hwD8-8jApZH-4VE1N1-d1mHg5-5uUEP5-cuY5Cd-hfkBj1-6KGsag-K16Us-9a2Fk7-chf735-CLFFE2-bd8tme-8m6KS3">LongitudeLatitude,snake,8/12/2009.</a>
 
 </body>
 </html>
